[gd_scene load_steps=6 format=2]

[ext_resource path="res://An/Tiles/Platform_Concrete.tscn" type="PackedScene" id=1]
[ext_resource path="res://Jeremy/EnemyDarkLord.tscn" type="PackedScene" id=2]
[ext_resource path="res://An/characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Jeremy/Castle.png" type="Texture" id=4]
[ext_resource path="res://Jeremy/BossRoom.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]

[node name="Node" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Castle" type="Sprite" parent="Node"]
position = Vector2( 704, 64 )
scale = Vector2( 1.45455, 1.22131 )
texture = ExtResource( 4 )

[node name="Player" parent="Node" instance=ExtResource( 3 )]
position = Vector2( 128, 576 )
GOD = true

[node name="Platform_Concrete" parent="Node" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65537, 1, 0, -131050, 1, 0, -1, 1, 0, -65514, 1, 0, 65535, 1, 0, 22, 1, 0, 131071, 1, 0, 65558, 1, 0, 196607, 1, 0, 131094, 1, 0, 262143, 1, 0, 196630, 1, 0, 327679, 1, 0, 262166, 1, 0, 393215, 1, 0, 327702, 1, 0, 458751, 1, 0, 393238, 1, 0, 524287, 1, 0, 458774, 1, 0, 589823, 1, 0, 524310, 1, 0, 655359, 1, 0, 589846, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0 )

[node name="EnemyDarkLord" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 1216, 384 )
max_health = 1000.0

[node name="BallTimer" type="Timer" parent="Node"]
wait_time = 2.0
autostart = true

[node name="TornadoTimer" type="Timer" parent="Node"]
wait_time = 0.754
[connection signal="timeout" from="Node/BallTimer" to="Node" method="_on_BallTimer_timeout"]
[connection signal="timeout" from="Node/TornadoTimer" to="Node" method="_on_TornadoTimer_timeout"]
